# OpenVR-SpaceCalibrator

./: .gitignore  CMakeLists.txt  README.md  driverInstall.py  install.sh  openvrspacecalibrator.desktop
OpenVR-SpaceCalibrator/: CMakeLists.txt  Calibration.cpp  Calibration.h  Configuration.cpp  IPCClient.cpp  IPCClient.h  OpenVR-SpaceCalibrator.cpp  UserInterface.cpp  windows.h
OpenVR-SpaceCalibratorDriver/: CMakeLists.txt  Hooking.h  IPCServer.cpp  IPCServer.h  InterfaceHookInjector.cpp  Logging.cpp  Logging.h  OpenVR-SpaceCalibratorDriver.cpp  ServerTrackedDeviceProvider.cpp  dllmain.cpp  windows.h
